--- a/environment.yml
+++ b/environment.yml
@@ -1,19 +1,16 @@
 name: priors
 channels:
-  - pytorch
-  - nvidia
   - conda-forge
 dependencies:
   - jupyter=1.0.0
-  - numpy=1.26.0
-  - pip=23.3.1
+  - pip=23.3.2
   - python=3.9.18
-  - pytorch=2.0.1
-  - pytorch-cuda=11.7
-  - torchvision=0.15.2
   - pip:
-    - dawgz==0.4.2
-    - lampe==0.8.2
-    - matplotlib==3.8.1
+    - --find-links https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
+    - datasets==2.16.1
+    - inox==0.4.0
+    - jax[cuda11_pip]==0.4.23
+    - matplotlib==3.8.2
+    - numpy==1.26.3
+    - optax==0.1.7
     - tqdm==4.66.1
-    - zuko==1.0.0
