--- a/environment.yml
+++ b/environment.yml
@@ -8,9 +8,11 @@ dependencies:
   - pip:
     - --find-links https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
     - datasets==2.16.1
-    - inox==0.4.0
+    - dawgz==0.4.2
+    - inox==0.4.3
     - jax[cuda11_pip]==0.4.23
     - matplotlib==3.8.2
     - numpy==1.26.3
     - optax==0.1.7
     - tqdm==4.66.1
+    - wandb==0.16.2
