--- a/environment.yml
+++ b/environment.yml
@@ -2,17 +2,18 @@ name: priors
 channels:
   - conda-forge
 dependencies:
+  - h5py=3.10.0
   - jupyter=1.0.0
+  - numpy=1.26.3
   - pip=23.3.2
   - python=3.9.18
   - pip:
     - --find-links https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
     - datasets==2.16.1
-    - dawgz==0.4.2
-    - inox==0.4.6
+    - dawgz==0.5.0
+    - inox==0.5.0
     - jax[cuda11_pip]==0.4.23
     - matplotlib==3.8.2
-    - numpy==1.26.3
     - optax==0.1.7
     - tqdm==4.66.1
     - wandb==0.16.2
