--- a/environment.yml
+++ b/environment.yml
@@ -10,10 +10,12 @@ dependencies:
   - pip:
     - --find-links https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
     - datasets==2.16.1
-    - dawgz==0.5.0
+    - dawgz==0.5.2
     - inox==0.5.0
     - jax[cuda11_pip]==0.4.23
     - matplotlib==3.8.2
+    - nvidia-cudnn-cu11~=8.9
     - optax==0.1.7
+    - scipy==1.12.0
     - tqdm==4.66.1
     - wandb==0.16.2
