--- a/environment.yml
+++ b/environment.yml
@@ -19,3 +19,7 @@ dependencies:
     - scipy==1.12.0
     - tqdm==4.66.1
     - wandb==0.16.2
+  - pip:
+    - torch==2.2.2
+    - torchvision==0.17.2
+    - torch-fidelity==0.3.0
