--- a/environment.yml
+++ b/environment.yml
@@ -18,6 +18,7 @@ dependencies:
     - optax==0.1.7
     - POT==0.9.3
     - scipy==1.12.0
+    - seaborn==0.13.2
     - tqdm==4.66.1
     - wandb==0.16.2
   - pip:
