--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
     - --find-links https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
     - datasets==2.16.1
     - dawgz==0.5.2
+    - dm-pix==0.4.2
     - inox==0.5.0
     - jax[cuda11_pip]==0.4.23
     - matplotlib==3.8.2
